[gd_scene load_steps=3 format=3 uid="uid://dqux8sf64i0mn"]

[ext_resource type="Script" path="res://scripts/info_point.gd" id="1_67bgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8yyg"]
size = Vector2(34, 34)

[node name="InfoPoint" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_67bgg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 7)
shape = SubResource("RectangleShape2D_e8yyg")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
